# screencursor

./: .gitignore  CHANGES_SUMMARY.md  GESTURES.md  README.md  deploy.md  design.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  project_context.md  sidecar.py  tasks.md
plans/: async-riding-fiddle.md
sidecar/: sidecar.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json  test_forward.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/camera/: mod.rs
src-tauri/src/gesture/: gestures.rs  mod.rs  tracker.rs
src-tauri/src/hand/: detection.rs  landmarks.rs  mod.rs
src-tauri/src/input/: common.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/settings/: config.rs  mod.rs
src-tauri/src/utils/: constants.rs
src/views/: About.vue  Calibration.vue  Settings.vue
