[package]
name = "screencursor"
version = "0.1.0"
edition = "2021"
description = "Hand gesture mouse control using computer vision"

[lib]
name = "screencursor"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png", "devtools"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencv = { version = "0.98", features = ["dnn", "imgproc", "videoio"] }
dirs = "5"
once_cell = "1"
thiserror = "1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
tauri-build = { version = "2.0" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
